modal: fix safari bug (widget's z-index makes overflow:hidden apply to fixed child)

--- a/src/browser/scss/widgets/_panel.scss
+++ b/src/browser/scss/widgets/_panel.scss
@@ -229,7 +229,7 @@
         pointer-events: none;
     }
     &.on {
-        z-index: 99999;
+        z-index: initial;
         > .toggle:after {
             color:var(--color-custom);
         }
